# Elite_Robots_CS_SDK

./: .gitignore  CMakeLists.txt  README.cn.md  README.md  elite_robot_clientConfig.cmake.in
debian/: changelog  control
dependencies/googletest/lib/Debug/: gmock.lib  gmock_main.lib  gtest_main.lib
dependencies/googletest/lib/Debug/pkgconfig/: gmock.pc  gtest.pc
dependencies/googletest/lib/Release/: gtest.lib
dependencies/googletest/lib/Release/pkgconfig/: gmock_main.pc  gtest_main.pc
doc/: CMakeLists.txt
doc/API/cn/: API.cn.md  EliteDriver.cn.md  PrimaryPort.cn.md  RTSI.cn.md
doc/API/en/: API.en.md  EliteDriver.en.md  PrimaryPort.en.md  RTSI.en.md
doc/Architecture/: Arch.cn.md  Arch.en.md
doc/BuildGuide/: BuildGuide.cn.md  BuildGuide.en.md
doc/Developer/cn/: DeveloperGuide.cn.md
doc/MessageFormat/: MessageFormat.cn.md  MessageFormat.en.md
doc/UserGuide/cn/: Dashboard.cn.md  EliteDriver.cn.md  Log.cn.md  PrimaryPort.cn.md  RTSI.cn.md  UserGuide.cn.md
doc/UserGuide/en/: Dashboard.en.md  EliteDriver.en.md  Log.en.md  PrimaryPort.en.md  RTSI.en.md  UserGuide.en.md
example/: CMakeLists.txt  dashboard_example.cpp  primary_example.cpp  rtsi_example.cpp  servo_example.cpp  speedj_example.cpp  speedl_example.cpp  trajectory_example.cpp
include/: EliteException.hpp  EliteOptions.hpp.in
include/Common/: SshUtils.hpp  TcpServer.hpp  Utils.hpp
include/Control/: ControlCommon.hpp  ReverseInterface.hpp  ScriptCommandInterface.hpp  ScriptSender.hpp  TrajectoryInterface.hpp
include/Dashboard/: DashboardClient.hpp
include/Elite/: ControlMode.hpp  ControllerLog.hpp  DataType.hpp  DefaultLogHandler.hpp  EliteDriver.hpp  Log.hpp  Logger.hpp  RemoteUpgrade.hpp  VersionInfo.hpp
include/Primary/: PrimaryPackage.hpp  PrimaryPort.hpp  PrimaryPortInterface.hpp  RobotConfPackage.hpp
include/Rtsi/: RtsiClient.hpp  RtsiClientInterface.hpp  RtsiIOInterface.hpp  RtsiRecipe.hpp  RtsiRecipeInternal.hpp
source/Common/: EliteException.cpp  SshUtils.cpp  TcpServer.cpp  Utils.cpp
source/Control/: ReverseInterface.cpp  ScriptCommandInterface.cpp  ScriptSender.cpp  TrajectoryInterface.cpp
source/Dashboard/: DashboardClient.cpp
source/Elite/: ControllerLog.cpp  EliteDriver.cpp  Log.cpp  Logger.cpp  RemoteUpgrade.cpp  VersionInfo.cpp
source/Primary/: PrimaryPort.cpp  PrimaryPortInterface.cpp  RobotConfPackage.cpp
source/Rtsi/: RtsiClient.cpp  RtsiClientInterface.cpp  RtsiIOInterface.cpp  RtsiRecipeInternal.cpp
source/resources/: external_control.script
test/: CMakeLists.txt  ControlInterfaceTest.cpp  DashboardClientTest.cpp  PrimaryPortTest.cpp  ReverseInterfaceTest.cpp  RtsiIOTest.cpp  ScriptCommnadInterfaceTest.cpp  ScriptSenderTest.cpp  SshUtilsTest.cpp  TcpServerTest.cpp  TrajectoryInterfaceTest.cpp
